2006-11-08 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Preserve ${LDFLAGS} inherited from environment
	for Win32 environments.

2006-11-07 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Don't pretend --enable-doc were the default.

2006-11-02 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the width of the efuse memory area for a
	number of AVRs.
	Closes bug #18182: Wrong setting of eFuse configuration for
	mega640/1280/1281/2560/2561 in avrdude 5.2

2006-11-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Implement HVSP and PP modes for the AVR Dragon.
	* config_gram.y: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* jtagmkII_private.h: (Ditto.)
	* lexer.l: (Ditto.)
	* stk500v2.c: (Ditto.)
	* stk500v2.h: (Ditto.)
	* avrdude.1: Document the HVSP and PP support for the Dragon.
	* doc/avrdude.texi: (Ditto.)

2006-10-27 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkI.c: Implement a flags field in struct serdev, and populate it
	with a flag that indicates whether the underlying communication can
	dynamically change its speed or not.  This flag is set for true serial
	communication but clear for USB communication.  Don't try to adjust
	the speed when talking over a communication channel that doesn't
	support it.  (The Dragon does not even support the respective parameter.)
	* jtagmkII.c: (Ditto.)
	* ser_posix.c: (Ditto.)
	* ser_win32.c: (Ditto.)
	* serial.h: (Ditto.)
	* usb_libusb.c: (Ditto.)

2006-10-26 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the AVR Dragon (JTAG and ISP mode).
	* config_gram.y: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* jtagmkII.h: (Ditto.)
	* lexer.l: (Ditto.)
	* stk500v2.c: (Ditto.)
	* stk500v2.h: (Ditto.)
	* usbdevs.h: (Ditto.)
	* avrdude.1: Document the AVR Dragon support.
	* doc/avrdude.texi: (Ditto.)

2006-10-09 Joerg Wunsch <j@uriah.heep.sax.de>

	Released AVRDUDE 5.2.

2006-10-09 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Bump version to 5.2
